--- a/app.json
+++ b/app.json
@@ -43,23 +43,13 @@
     },
     "FORCE_SUB": {
       "description": "Channel ID (with -100 prefix) for forced subscription",
-      "value": "-10012345567",
-      "required": true
+      "value": "",
+      "required": false
     },
     "LOG_GROUP": {
       "description": "Log channel/group ID (with -100 prefix) where the bot will send logs",
-      "value": "-1001234456",
+      "value": "",
       "required": true
-    },
-    "MASTER_KEY": {
-      "description": "Master key used for session encryption",
-      "value": "gK8HzLfT9QpViJcYeB5wRa3DmN7P2xUq",
-      "required": false
-    },
-    "IV_KEY": {
-      "description": "Initialization vector key for decryption",
-      "value": "s7Yx5CpVmE3F",
-      "required": false
     },
     "YT_COOKIES": {
       "description": "Cookies for YouTube downloads (in Netscape format)",
